[gd_scene load_steps=8 format=3 uid="uid://c17iqy4eucnxw"]

[ext_resource type="Texture2D" uid="uid://c6k4uxpeogbi1" path="res://projectiles/particle1.png" id="1"]
[ext_resource type="Script" path="res://projectiles/Nift.gd" id="2"]
[ext_resource type="PackedScene" uid="uid://dd5l5ofvxbhvd" path="res://projectiles/lite.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://73wqw0bpkxnl" path="res://scenes/particles/pars2.tscn" id="3_5uaq6"]
[ext_resource type="PackedScene" uid="uid://blrib1vldqgsp" path="res://scenes/particles/pars.tscn" id="4"]
[ext_resource type="AudioStream" uid="uid://cml4wn3a6hy6d" path="res://music/ui_jingle2.mp3" id="6_w0cj4"]

[sub_resource type="CircleShape2D" id="1"]

[node name="Nift" type="Area2D" groups=["projectile"]]
z_index = 100
collision_layer = 12
collision_mask = 12
script = ExtResource("2")

[node name="pars" parent="." instance=ExtResource("4")]
emitting = false
one_shot = true

[node name="pars2" parent="." instance=ExtResource("3_5uaq6")]
visible = false

[node name="Sprite" type="Sprite2D" parent="."]
scale = Vector2(0.5, 0.5)
texture = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("1")

[node name="VisibilityNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false

[node name="Light2D" parent="." instance=ExtResource("3")]
scale = Vector2(0.5, 0.25)
color = Color(0.952941, 0.952941, 0.952941, 1)

[node name="screenLeave" type="Timer" parent="."]
wait_time = 5.0

[node name="woosh" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_w0cj4")

[connection signal="area_entered" from="." to="." method="_on_Nift_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Nift_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="screenLeave" to="." method="_on_screen_leave_timeout"]
